[package]
name = "terra-and-caelus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10" }
bevy_common_assets = { version = "0.6.0", features = ["json", "yaml"] }
bevy_asset_loader = "0.16"
console_error_panic_hook = "0.1"
noisy_bevy = "0.3"
serde = { version = "1", features = ["derive"] }
bevy-inspector-egui = "*"
bevy_vector_shapes = "0.4"
belly = { git = "https://github.com/jkb0o/belly" }
anyhow = "*"
leafwing-input-manager = "*"